# gruf

./: README.md  config.py  config.yaml  data_module.py  environment.yml  generate.py  greedylr.py  learn.py  lightning.py  lightning_min_lm.py  main.py  plot_train.R  pyproject.toml  requirements.txt  test_lightning.py  train.py  train_hybrid.py  train_lightning.py
minGRU_pytorch/: minGRU.py  minLM.py
