[project]
name = "minGRU-pytorch"
version = "0.2.1"
description = "minGRU"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'associative scan based rnn',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "einops>=0.8.1",
    "torch>=2.6.0",
    "pytorch-lightning>=2.5.1",
    "numpy>=2.2.4",
    "tqdm>=4.67.1",
    "tensorboard>=2.19.0",
    "rich>=10.0.0",
    "deepspeed>=0.10.0",
]

[project.optional-dependencies]
deepspeed = [
    "ninja",  # Required for JIT C++ compilation
]
examples = []
test = [
    "pytest"
]

[project.urls]
Homepage = "https://pypi.org/project/minGRU-pytorch/"
Repository = "https://github.com/lucidrains/minGRU-pytorch"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["minGRU_pytorch"]
